WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304569
[JSC] Fix `%TypedArray%.prototype.includes` to Align with ECMA-262 Part2
https://bugs.webkit.org/show_bug.cgi?id=304569
Summary
[JSC] Fix `%TypedArray%.prototype.includes` to Align with ECMA-262 Part2
Keita Nonaka
Reported
2025-12-21 03:58:26 PST
This patch fixes `%TypedArray%.prototype.includes` by adding range check to ensure the `index` is less than the array length, aligning the behavior with ECMA-262[1]. [1]:
https://tc39.es/ecma262/#sec-%typedarray%.prototype.includes
Attachments
Add attachment
proposed patch, testcase, etc.
Keita Nonaka
Comment 1
2025-12-21 04:01:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55770
EWS
Comment 2
2025-12-25 14:30:56 PST
Committed
304940@main
(4a8356428b41): <
https://commits.webkit.org/304940@main
> Reviewed commits have been landed. Closing PR #55770 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-12-25 14:31:12 PST
<
rdar://problem/167183441
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug